Preserve QueryString for more navigation
Breadcrumb links now have query string preserved

Update preview site to test parameters nested into links

Slight optimizations in queryString preservation
   - don't attempt preservation or replacement if there is no string
   - consolidate all selectorQueries into one

--- a/preview-src/ui-model.yml
+++ b/preview-src/ui-model.yml
@@ -105,6 +105,9 @@ page:
       - content: Brand&#8217;s Hardware &amp; Software Requirements
         url: /xyz/5.2/index.html
         urlType: internal
+      - content: Link Testing
+        url: '/xyz/5.2/index.html#link-testing'
+        urlType: internal
       - content: Cu Solet
         url: '/xyz/5.2/index.html#cu-solet'
         urlType: internal
