--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/vscode-remote/devcontainer.json or this file's README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.134.0/containers/javascript-node
 {
-	"name": "OpenShift Starter Guide",
+	"name": "Course UI",
 	"build": {
 		"dockerfile": "Dockerfile",
 		"target": "${env:DEVCONTAINER_TARGET_PREFIX}devcontainer",
